# colour

./: CHANGELOG  LICENSE  README  Tests.hs  colour.cabal
Data/: Colour.hs
Data/Colour/: CIE.hs  Chan.hs  HDTV.hs  Internal.hs  Luma.hs  Matrix.hs  Names.hs  RGB.hs  RGBSpace.hs  Rec601.hs  Rec709.hs  SDTV.hs  SDTV525.hs  SDTV625.hs  SRGB.hs
Data/Colour/CIE/: Chromaticity.hs  Illuminant.hs
Data/Colour/RGBSpace/: HSL.hs  HSV.hs
Data/Colour/SRGB/: Linear.hs
